--- a/views/users/change_email.pug
+++ b/views/users/change_email.pug
@@ -3,7 +3,7 @@ html(lang='en')
   include ../common/header.pug
   +header(title)
   body
-    header
+    head
     include ../common/navbar.pug
     +navbar(user)
     .container
