--- a/views/ticket/ticket_form/basics.pug
+++ b/views/ticket/ticket_form/basics.pug
@@ -47,7 +47,7 @@ html(lang='en')
   include ../../common/header.pug
   +header(title)
   body
-    header
+    head
     style.
         @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
         body,
