--- a/views/ticket/ticket_form/details.pug
+++ b/views/ticket/ticket_form/details.pug
@@ -58,7 +58,7 @@ html(lang='en')
   include ../../common/header.pug
   +header(title)
   body
-    header
+    head
     style.
         @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
         body,
