--- a/views/ticket/ticket_form/solution_detail.pug
+++ b/views/ticket/ticket_form/solution_detail.pug
@@ -27,7 +27,7 @@ html(lang='en')
   include ../../common/header.pug
   +header(title)
   body
-    header
+    head
     style.
         @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
         body,
