--- a/views/ticket/ticket_form/solutions.pug
+++ b/views/ticket/ticket_form/solutions.pug
@@ -86,7 +86,7 @@ html(lang='en')
   include ../../common/header.pug
   +header(title)
   body
-    header
+    head
     script(src='https://cloud.tinymce.com/5/tinymce.min.js?apiKey=ld4nt2kua9tevpu1bdsjmargql8oksngzmeps4cqup50heof')
     script.
       ClassicEditor
