--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -34,7 +34,7 @@ html(lang='en')
   include ../common/header.pug
   +header(title)
   body
-    head
+    header
     style.
         @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
         body,
@@ -251,12 +251,6 @@ html(lang='en')
             height: 100%;
           }
         }
-      script(async src='https://www.googletagmanager.com/gtag/js?id=UA-138699201-1')
-      script.
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-138699201-1');
     include ../common/navbar.pug
     +navbar(user)
     .bold-line
