--- a/views/ticket/admin_1.pug
+++ b/views/ticket/admin_1.pug
@@ -4,53 +4,53 @@ html(lang='en')
   include ../common/header.pug
   +header(title)
   body
-    header
-      include ../common/navbar.pug
-      +navbar(user)
-      .container-fluid
-        .row.align-items-center
-          .col-md-10.order-md-1.text-center.text-md-left
-            h1 tickets #{subtitle}
-            p
-              script(src="/javascripts/ticket_table.js")
-              span
-                a#tickets0(href="/tickets/" + user.userId + "/0") Queued #{pre}
-                |          |
-                a#tickets1(href="/tickets/" + user.userId + "/1") In-Progress #{pre}
-                |          |
-                a#tickets2(href="/tickets/" + user.userId + "/2") Solved
-              table.table.table-hover
-                thead.thead-dark
-                  tr
-                    th(scope="col") #
-                    th(scope="col") Name
-                    th(scope="col") Email
-                    th(scope="col") Phone Number
-                    th(scope="col") Topic
-                    th(scope="col") Subject
-                  tr
-                tbody
-                for ticket in tickets
-                  - var ticketPriority;
-                  if ticket.priority
-                    - ticketPriority = "table-danger";
-                  else
-                    - ticketPriority = "tickets";
-                  tr(class=ticketPriority, id=ticket.ticketId, href="/tickets/"+ user.userId + "/" + ticket.ticketId)
-                    td
-                      span #{count++}
-                    td
-                      span #{ticket.user.firstName + " " + ticket.user.lastName}
-                    td
-                      span #{ticket.user.email}
-                    td
-                      span #{ticket.user.phoneNumber}
-                    td
-                      span #{ticket.topic}  
-                    td
-                      span #{ticket.title}
+    head
+    include ../common/navbar.pug
+    +navbar(user)
+    .container-fluid
+      .row.align-items-center
+        .col-md-10.order-md-1.text-center.text-md-left
+          h1 tickets #{subtitle}
+          p
+            span
+              a#tickets0(href="/tickets/" + user.userId + "/0") Queued #{pre}
+              |          |
+              a#tickets1(href="/tickets/" + user.userId + "/1") In-Progress #{pre}
+              |          |
+              a#tickets2(href="/tickets/" + user.userId + "/2") Solved
+            table.table.table-hover
+              thead.thead-dark
+                tr
+                  th(scope="col") #
+                  th(scope="col") Name
+                  th(scope="col") Email
+                  th(scope="col") Phone Number
+                  th(scope="col") Topic
+                  th(scope="col") Subject
+                tr
+              tbody
+              for ticket in tickets
+                - var ticketPriority;
+                if ticket.priority
+                  - ticketPriority = "table-danger";
+                else
+                  - ticketPriority = "tickets";
+                tr(class=ticketPriority, id=ticket.ticketId, href="/tickets/"+ user.userId + "/" + ticket.ticketId)
+                  td
+                    span #{count++}
+                  td
+                    span #{ticket.user.firstName + " " + ticket.user.lastName}
+                  td
+                    span #{ticket.user.email}
+                  td
+                    span #{ticket.user.phoneNumber}
+                  td
+                    span #{ticket.topic}  
+                  td
+                    span #{ticket.title}
                   
 
 
     include ../common/footer.pug
     +footer()
+    script(src="/javascripts/ticket_table.js")
