Added Welcome Page
Changed log in button to submit ticket.

--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -47,10 +47,11 @@ html(lang='en')
         .jumbotron
           .container
             h1.display-4 Welcome to ACNAPI's Helpdesk
-            p Log in to send us a ticket and our technical consultants will get back to you within 3 working days.
-            p: a.btn.btn-primary.btn-warning(href="/users/ticket_form/basics" role="button") Log In &raquo;
+            p Log in to submit a ticket and our technical consultants will get back to you within 3 working days.
+            p: a.btn.btn-primary.btn-warning(href="/users/ticket_form/basics" role="button") Submit Ticket &raquo;
     include common/footer.pug
     +footer()
+
     
 
     //- .container-fluid
