--- a/views/ticket/ticket_messages.pug
+++ b/views/ticket/ticket_messages.pug
@@ -64,4 +64,4 @@ html(lang='en')
 
     include ../common/footer.pug
     +footer()
-    script(src="/javascripts/Counter.js")
+    //- script(src="/javascripts/Counter.js")
