profile pic added and colours changes

--- a/views/ticket/ticket_form/basics.pug
+++ b/views/ticket/ticket_form/basics.pug
@@ -164,7 +164,7 @@ html(lang='en')
           -webkit-justify-content: center;
           -ms-flex-pack: center;
           justify-content: center;
-          background: #fff;
+          background: #666666;
           height: 100%;
           width:100%;
           min-height: 100px;
@@ -231,8 +231,8 @@ html(lang='en')
         }
         
         .overlay {
-          background: -webkit-linear-gradient(#FEDA77, #F58529);
-          background: linear-gradient(#FEDA77, #F58529);
+          background: -webkit-linear-gradient(#FFD24C, #ffc107); ffc107
+          background: linear-gradient(#FFD24C, #ffc107);
           opacity: 0.85;
           filter: alpha(opacity=85);
           height: 500px;
