--- a/views/ticket/ticket_form/details.pug
+++ b/views/ticket/ticket_form/details.pug
@@ -65,6 +65,7 @@ html(lang='en')
         html {
           margin: 0;
           height: 100%;
+          background: #666666
         }
         
         input {
@@ -175,11 +176,11 @@ html(lang='en')
           -webkit-justify-content: center;
           -ms-flex-pack: center;
           justify-content: center;
-          background: #fff;
+          background: #666666;
           height: 100%;
           width:100%;
           min-height: 100px;
-          height: 100vh;
+          min-height: 100vh;
           min-width: 100vw;
         }
         
@@ -234,15 +235,15 @@ html(lang='en')
           flex-flow: column;
           box-shadow: 0px 15px 50px 10px rgba(0, 0, 0, 0.2);
           box-sizing: border-box;
-          height: 700px;
+          height: 90%;
           width: 1000px;
           background: #fff;
           background: url('https://pexels.imgix.net/photos/27718/pexels-photo-27718.jpg?fit=crop&w=1280&h=823') top left no-repeat;
         }
         
         .overlay {
-          background: -webkit-linear-gradient(#FEDA77, #F58529);
-          background: linear-gradient(#FEDA77, #F58529);
+          background: -webkit-linear-gradient(#FFD24C, #ffc107); 
+          background: linear-gradient(#FFD24C, #ffc107);
           opacity: 0.85;
           filter: alpha(opacity=85);
           height: 1300px;
