--- a/views/ticket/ticket_form/solution_detail.pug
+++ b/views/ticket/ticket_form/solution_detail.pug
@@ -144,7 +144,7 @@ html(lang='en')
           -webkit-justify-content: center;
           -ms-flex-pack: center;
           justify-content: center;
-          background: #eee;
+          background: #666666;
           height: 100%;
           width:100%;
           min-height: 100px;
@@ -210,8 +210,8 @@ html(lang='en')
         }
         
         .overlayqn {
-          background: -webkit-linear-gradient(#FEDA77, #F58529);
-          background: linear-gradient(#FEDA77, #F58529);
+          background: -webkit-linear-gradient(#FFD24C, #ffc107); 
+          background: linear-gradient(#FFD24C, #ffc107);
           opacity: 0.85;
           filter: alpha(opacity=85);
           height: 700px;
@@ -241,8 +241,8 @@ html(lang='en')
         }
         
         .overlayans {
-          background: -webkit-linear-gradient(#FEDA77, #F58529);
-          background: linear-gradient(#FEDA77, #F58529);
+          background: -webkit-linear-gradient(#FFD24C, #ffc107); 
+          background: linear-gradient(#FFD24C, #ffc107);
           opacity: 0.85;
           filter: alpha(opacity=85);
           height: 560px;
