--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -12,6 +12,7 @@ html(lang='en')
         html {
           margin: 0;
           height: 100%;
+          background: #eee
         }
         
         input {
@@ -42,6 +43,12 @@ html(lang='en')
           transition: color .2s ease;
         }
         
+        .center {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 150px;
+        }
         .spacing {
           -webkit-box-flex: 1;
           -webkit-flex-grow: 1;
@@ -145,9 +152,9 @@ html(lang='en')
         
         .welcome {
           font-weight: 500;
-          margin-top: 75px;
+          margin-top: 3px;
           text-align: center;
-          font-size: 40px;
+          font-size: 30px;
           font-size: 2.5rem;
           letter-spacing: 0px;
           letter-spacing: 0.05rem;
@@ -181,7 +188,7 @@ html(lang='en')
           flex-flow: column;
           box-shadow: 0px 15px 50px 10px rgba(0, 0, 0, 0.2);
           box-sizing: border-box;
-          height: 650px;
+          height: 700px;
           width: 1000px;
           background: #fff;
           background: url('https://pexels.imgix.net/photos/27718/pexels-photo-27718.jpg?fit=crop&w=1280&h=823') top left no-repeat;
@@ -190,9 +197,9 @@ html(lang='en')
         .overlay {
           background: -webkit-linear-gradient(#FEDA77, #F58529);
           background: linear-gradient(#FEDA77, #F58529);
-          opacity: 0.85;
-          filter: alpha(opacity=85);
-          height: 650px;
+          opacity: 1;
+          filter: alpha(opacity=100);
+          height: 800px;
           position: absolute;
           width: 1000px;
           z-index: 1;
@@ -237,6 +244,8 @@ html(lang='en')
         .content
           .welcome Profile Page
           .subtitle Edit details here
+          .row
+            img(src='/images/aboutConsultant/JemPortrait.png', width="150", height="180", class="center")
           form(action='/profile_change', method='POST')
             div.formgroup
               label.small.mb-1.mt-3 Email: 
