--- a/views/ticket/user_0.pug
+++ b/views/ticket/user_0.pug
@@ -10,7 +10,7 @@ html(lang='en')
     .container-fluid
       .row.align-items-center
         .col-md-10.order-md-1.text-center.text-md-left
-          h1 tickets #{subtitle}
+          h1 My tickets #{subtitle}
           p
             span
               a#tickets0(href="/my_ticket/" + "0/" + user.userId ) Queued #{pre}
