rt chat checkpoint

--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -13,7 +13,7 @@ header.banner
 section.section
   // These elements are displayed as white info cards in the middle of the screen
   .left
-    img#leftImage(src='/images/unnamed.jpg')
+    img#leftImage(src='/images/aboutConsultant/JemPortrait.png')
     .info
       h2
         span.nickname-left
@@ -29,7 +29,7 @@ section.section
        | .
     h5 keep the website open, we will remind you when an admin enters
   .nomessages
-    img#noMessagesImage(src='/images/unnamed.jpg')
+    img#noMessagesImage(src='/images/aboutConsultant/JemPortrait.png')
     .info
       h2
         | You are chatting with 
