--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -30,7 +30,7 @@ body {
   color: white;
 }
 .homebannertext span {
-  color: #d6441b;
+  color: #ffae42;
 }
 
 #logo {
@@ -90,7 +90,7 @@ body {
 #create {
   width: 300px;
   height: 100px;
-  background-color: #70b1d1;
+  background-color: #ffae42;
   text-align: center;
   display: block;
   margin: 0px auto;
@@ -126,7 +126,6 @@ body {
 }
 
 /* ------ Connected ------*/
-
 
 .infoConnected {
   text-align: left;
