--- a/views/chat/room.pug
+++ b/views/chat/room.pug
@@ -6,17 +6,18 @@ head
   title Accenture Private Chat | make your life efficient
   link(type='text/css' rel='stylesheet' href='stylesheets/stylesheet.css')
   link(href='http://fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700' rel='stylesheet' type='text/css')
+  style.
+
 header.homebanner
   h1.homebannertext
     a#logo(href='/')
-    | Accenture Private 
+    | Accenture Real Time     
     span Chat
   div(align='right')
     a(href='/') back
 section
-  .homesection
     .node
-      img#nodelogo(src='/images/Accenture-logo.png' alt='accenture logo')
+      img(src='/images/Accenture-logo.png' alt='accenture logo' height="200px")
       h2#chat powered web chat
     a#create(title='Create' href='/select')
       #createbutton
