rt chat checkpoint image broken link

--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -102,7 +102,7 @@ script.
 
   // save the gravatar url
   socket.on("img", function (data) {
-    img = data;
+    //- img = data;
   });
 
   // receive the names and avatars of all people in the chat room
