--- a/views/ticket/ticket_form/basics.pug
+++ b/views/ticket/ticket_form/basics.pug
@@ -231,7 +231,7 @@ html(lang='en')
         }
         
         .overlay {
-          background: -webkit-linear-gradient(#FFD24C, #ffc107); ffc107
+          background: -webkit-linear-gradient(#FFD24C, #ffc107); 
           background: linear-gradient(#FFD24C, #ffc107);
           opacity: 0.85;
           filter: alpha(opacity=85);
