--- a/views/ticket/admin_0.pug
+++ b/views/ticket/admin_0.pug
@@ -30,25 +30,29 @@ html(lang='en')
                     th(scope="col") Subject
                   tr
                 tbody
-                for ticket in tickets
-                  - var ticketPriority;
-                  if ticket.priority
-                    - ticketPriority = "table-danger";
-                  else
-                    - ticketPriority = "tickets";
-                  tr(class=ticketPriority, id=ticket.ticketId, href="/tickets/"+ user.userId + "/" + ticket.ticketId)
-                    td
-                      span #{count++}
-                    td
-                      span #{ticket.user.firstName + " " + ticket.user.lastName}
-                    td
-                      span #{ticket.user.email}
-                    td
-                      span #{ticket.user.phoneNumber}
-                    td
-                      span #{ticket.topic}  
-                    td
-                      span #{ticket.title}
+                  for ticket in tickets
+                    - var ticketPriority;
+                    if ticket.priority
+                      - ticketPriority = "table-danger";
+                    else
+                      - ticketPriority = "table-active";
+                    tr(class=ticketPriority, id=ticket.ticketId, href="/tickets/"+ user.userId + "/" + ticket.ticketId)
+                      td
+                        span #{count++}
+                      td
+                        span #{ticket.user.firstName + " " + ticket.user.lastName}
+                      td
+                        span #{ticket.user.email}
+                      td
+                        span #{ticket.user.phoneNumber}
+                      td
+                        span #{ticket.topic}  
+                      td
+                        span #{ticket.title}
+              div(style='font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 28px;font-size: 12px; color: #000;')
+              | For all admin: if the ticket posted is not respectful or against our rules and regulations, 
+              a(style="color: #3498DB;" href="/flag_ticket/"+ticket.ticketId) click here 
+              | to flag ticket
             else
               p There are currently no tickets! :)
                   
