--- a/views/ticket/user.pug
+++ b/views/ticket/user.pug
@@ -25,7 +25,7 @@ html(lang='en')
                 - var status, tableColor;
                 if ticket.tag == 0
                   - status = 'Awaiting Response';
-                  - tableColor = 'table-active';
+                  - tableColor = 'table-default';
                 else if ticket.tag == 1
                   - status = 'In progress';
                   - tableColor = 'table-primary';
