--- a/views/ticket/ticket_messages.pug
+++ b/views/ticket/ticket_messages.pug
@@ -51,6 +51,11 @@ html(lang='en')
                       .box.sb2
                         span!=message.content
             hr
+          if user.is_admin
+            div(style='font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 28px;font-size: 12px; color: #000;')
+              | For all admin: if the ticket posted is not respectful or against our rules and regulations, 
+              a(style="color: #3498DB;" href="/flag_ticket/"+ticket.ticketId) click here 
+              | to flag ticket
           if !user.is_admin && ticket.tag == 1
             div(style='font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 28px;font-size: 12px; color: #000;')
               | If you think the admin has solved your problem, please 
