Changed Navbar + Carousel

--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -11,10 +11,10 @@ mixin navbar(user)
       ul.navbar-nav.mr-auto
 
         li.nav-item
-          a#btn_tickets.nav-link(href="/tickets" data-toggle="tooltip" data-placement="bottom" title="Your Tickets") Tickets
+          a#btn_tickets.nav-link(href="/tickets" data-toggle="tooltip" data-placement="bottom" title="Your Tickets") My Tickets
             img(src='/images/navbar/bookwhite.png', width="30", height="30")
         li.nav-item
-          a#btn_ticket-form.nav-link(href="/ticket_form/basics" data-toggle="tooltip" data-placement="bottom" title="Questions") Tickets 
+          a#btn_ticket-form.nav-link(href="/ticket_form/basics" data-toggle="tooltip" data-placement="bottom" title="Questions") Send Ticket 
             img(src='/images/navbar/helpwhite.png', width="30", height="30")
         li.nav-item
           a#btn_chat.nav-link(href='/room' target="_blank" ata-toggle="tooltip" data-placement="bottom" title="Chat with Admin now!") Admin Chat 
