--- a/views/consultant.pug
+++ b/views/consultant.pug
@@ -24,7 +24,7 @@ head
         p(style='padding-right:150px')
           | Chelsea
           br
-          |  Vice President, Technology Consulting
+          |  Vice President, Consulting
       h3(style='font-size:20px') Related Links
       table(border='0' cellpadding='0' cellspacing='0')
         tr
@@ -44,9 +44,9 @@ head
       .card(style='height:250px')
         .card-body(style='font-family: Arial, sans-serif; font-size:15px; ')
           b
-            | -Part Time Hibernator
+            | -Undergraduate, ISTD
             br
-            |                         -Full Time Handicap
+            |                 
             br
       p Sleeps alot.
       br
@@ -58,7 +58,7 @@ head
         p(style='padding-right:150px')
           | Peng Fei
           br
-          |  Vice President, Technology Consulting
+          |  Vice President, Consulting
       h3(style='font-size:20px') Related Links
       table(border='0' cellpadding='0' cellspacing='0')
         tr
@@ -78,7 +78,7 @@ head
       .card(style='height:250px')
         .card-body(style='font-family: Arial, sans-serif; font-size:15px; ')
           b
-            | -Machine Learning
+            | -Undergraduate, ISTD
             br
       p Codes alot.
       br
