--- a/views/users/signup.pug
+++ b/views/users/signup.pug
@@ -185,7 +185,9 @@ html(lang='en')
         flex-flow: column;
         box-shadow: 0px 15px 50px 10px rgba(0, 0, 0, 0.2);
         box-sizing: border-box;
-        height: 700px;
+
+        margin-top: 50px;
+        height: 650px;
         width: 1000px;
         background: #fff;
         background: url('https://pexels.imgix.net/photos/27718/pexels-photo-27718.jpg?fit=crop&w=1280&h=823') top left no-repeat;
@@ -194,8 +196,8 @@ html(lang='en')
       .overlay {
         background: -webkit-linear-gradient(#FEDA77, #F58529);
         background: linear-gradient(#FEDA77, #F58529);
-        opacity: 0.85;
-        filter: alpha(opacity=85);
+        opacity: 0.9;
+        filter: alpha(opacity=90);
         height: 700px;
         position: absolute;
         width: 1000px;
