--- a/views/ticket/admin_2.pug
+++ b/views/ticket/admin_2.pug
@@ -10,6 +10,16 @@ html(lang='en')
     .container-fluid
       .row.align-items-center
         .col-md-10.order-md-1.text-center.text-md-left
+          - let topics = ["No Filter", "Python", "C++", "Java", "Go", "Android Studio", "Javascript", "C"];
+          h1 Tickets
+          form(action='/ticket/2/' + user.userId,method='POST')
+            .form-group.row
+              .col-sm-5
+                select(class = 'form-control' name='filter')
+                  each topic in topics
+                    option#topic.input-line.full-width(value=topic) #{topic}
+              .col-sm-2
+                button.btn.btn-outline-success Submit
           h1 tickets #{subtitle}
           p
             span
