pop up solutions

--- a/views/ticket/ticket_form/solutions.pug
+++ b/views/ticket/ticket_form/solutions.pug
@@ -337,23 +337,23 @@ html(lang='en')
                 tr
                   th(scope='row') 1
                   td
-                    a(href="/solution_detail?id=" + solution.first.id) #{solution.first.title}
+                    a(href="/solution_detail?id=" + solution.first.id  target="_blank") #{solution.first.title}
                 tr
                   th(scope='row') 2
                   td
-                    a(href="/solution_detail?id=" + solution.second.id) #{solution.second.title}
+                    a(href="/solution_detail?id=" + solution.second.id  target="_blank") #{solution.second.title}
                 tr
                   th(scope='row') 3
                   td 
-                    a(href="/solution_detail?id=" + solution.third.id) #{solution.third.title}
+                    a(href="/solution_detail?id=" + solution.third.id  target="_blank" ) #{solution.third.title}
                 tr
                   th(scope='row') 4
                   td 
-                    a(href="/solution_detail?id=" + solution.fourth.id) #{solution.fourth.title}
+                    a(href="/solution_detail?id=" + solution.fourth.id  target="_blank" ) #{solution.fourth.title}
                 tr
                   th(scope='row') 5
                   td 
-                    a(href="/solution_detail?id=" + solution.fifth.id) #{solution.fifth.title}
+                    a(href="/solution_detail?id=" + solution.fifth.id  target="_blank" ) #{solution.fifth.title}
 
 
             //- // register form
