--- a/views/ticket/ticket_form/details.pug
+++ b/views/ticket/ticket_form/details.pug
@@ -315,7 +315,7 @@ html(lang='en')
                 label(for='topic') Topics:
                 select(class = 'form-control' name='topic')
                   each topic in topics
-                    option#topic.input-line.full-width(value=topic) #{topic}
+                    option#topic.form-control(value=topic) #{topic}
                 br
 
                 label(for='priority') Subject:
