--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -18,7 +18,7 @@
 //-                 width: 100%;
 //-                 margin: auto;
 //-                 }
-				
+        
 
 
 //-     include common/footer.pug
@@ -30,15 +30,13 @@ html(lang='en')
   title=title
   +header(title)
   body
-
-    head
-      script(async src='https://www.googletagmanager.com/gtag/js?id=UA-138699201-1')
-      script.
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-138699201-1');
-
+  head
+    script(async src='https://www.googletagmanager.com/gtag/js?id=UA-138699201-1')
+    script.
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-138699201-1');
     include common/navbar.pug
     +navbar(user)
     .container-fixed
@@ -48,10 +46,14 @@ html(lang='en')
         .jumbotron
           .container
             h1.display-4 Welcome to ACNAPI's Helpdesk
-            p Log in to submit a ticket and our technical consultants will get back to you within 3 working days.
-            p: a.btn.btn-primary.btn-warning(href="/users/ticket_form/basics" role="button") Submit Ticket &raquo;
+            p Log in to send us a ticket and our technical consultants will get back to you within 3 working days.
+            p: a.btn.btn-primary.btn-warning(href="/users/ticket_form/basics" role="button") Log In &raquo;
+
     include common/footer.pug
     +footer()
+    include common/footer.pug
+    +footer()
+    
 
     //- .container-fluid
     //-     link#bootstrap-css(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css' rel='stylesheet')
@@ -59,8 +61,8 @@ html(lang='en')
     //-     script(src='//code.jquery.com/jquery-1.11.1.min.js')
     //-     script(src='/public/javascripts/staticchat.js')
     //-     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js')
-				
-				
+        
+        
     //-     // ---- Include the above in your HEAD tag --------
     //-     .chat_window
     //-     .top_menu
@@ -81,5 +83,4 @@ html(lang='en')
     //-         .avatar
     //-         .text_wrapper
     //-         .text
-
 
