--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -6,6 +6,12 @@ html(lang='en')
   +header(title)
   body
     head
+      script(async src='https://www.googletagmanager.com/gtag/js?id=UA-138699201-1')
+      script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-138699201-1');
     style.
         @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
         body,
@@ -229,12 +235,6 @@ html(lang='en')
             height: 100%;
           }
         }
-      script(async src='https://www.googletagmanager.com/gtag/js?id=UA-138699201-1')
-      script.
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-138699201-1');
     include ../common/navbar.pug
     +navbar(user)
     .bold-line
@@ -269,7 +269,7 @@ html(lang='en')
                 p#err_phoneNumber.small.text-danger #{errors.phoneNumber}
               .spacing
                 p.mt-2.mb-0
-                  | Change your password #[a(href="/users/forgot_password" class="text-light") here].
+                  | Change your password #[a(href="/users/change_password" class="text-light") here].
               button.ghost-round.full-width Confirm Changes
     include ../common/footer.pug
     +footer()
