--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -274,6 +274,6 @@ html(lang='en')
               .spacing
                 p.mt-2.mb-0
                   | Change your password #[a(href="/users/change_password" class="text-light") here].
-              button.ghost-round.full-width Confirm Changes
+              button.btn.ghost-round.full-width Confirm Changes
     include ../common/footer.pug
     +footer()
