--- a/views/ticket/admin_1.pug
+++ b/views/ticket/admin_1.pug
@@ -12,7 +12,7 @@ html(lang='en')
         .col-md-10.order-md-1.text-center.text-md-left
           - let topics = ["No Filter", "Python", "C++", "Java", "Go", "Android Studio", "Javascript", "C"];
           h1 Tickets
-          form(action='/ticket/1/' + user.userId,method='POST')
+          form(action='/ticket/0/' + user.userId,method='POST')
             .form-group.row
               .col-sm-5
                 select(class = 'form-control' name='filter')
@@ -38,27 +38,30 @@ html(lang='en')
                     th(scope="col") Phone Number
                     th(scope="col") Topic
                     th(scope="col") Subject
+                    th(scope="col") Date Created
                   tr
                 tbody
-                for ticket in tickets
-                  - var ticketPriority;
-                  if ticket.priority
-                    - ticketPriority = "table-danger";
-                  else
-                    - ticketPriority = "table-primary";
-                  tr(class=ticketPriority, id=ticket.ticketId, href="/tickets/"+ user.userId + "/" + ticket.ticketId)
-                    td
-                      span #{count++}
-                    td
-                      span #{ticket.user.firstName + " " + ticket.user.lastName}
-                    td
-                      span #{ticket.user.email}
-                    td
-                      span #{ticket.user.phoneNumber}
-                    td
-                      span #{ticket.topic}  
-                    td
-                      span #{ticket.title}
+                  for ticket in tickets
+                    - var ticketPriority;
+                    if ticket.priority
+                      - ticketPriority = "table-danger";
+                    else
+                      - ticketPriority = "table-default";
+                    tr(class=ticketPriority, id=ticket.ticketId, href="/tickets/"+ user.userId + "/" + ticket.ticketId)
+                      td
+                        span #{count++}
+                      td
+                        span #{ticket.user.firstName + " " + ticket.user.lastName}
+                      td
+                        span #{ticket.user.email}
+                      td
+                        span #{ticket.user.phoneNumber}
+                      td
+                        span #{ticket.topic}  
+                      td
+                        span #{ticket.title}
+                      td
+                        span #{ticket.createdAt}
             else
               p There are currently no tickets! :)
                   
