--- a/views/consultant.pug
+++ b/views/consultant.pug
@@ -48,7 +48,7 @@ head
             br
             |                 
             br
-      p Sleeps alot.
+      p Codes alot.
       br
 .container(style='margin-top:30px')
   .row
