--- a/views/welcomeAdmin.pug
+++ b/views/welcomeAdmin.pug
@@ -52,7 +52,7 @@ html(lang='en')
               span
               h5 Ticket
             .col-xs-6.col-sm-3.placeholder
-              a(href="/") 
+              a(href="/manage_users") 
                 img.img-responsive(src='/images/ViewUser.png', width='150', height='150 ', alt='Generic placeholder thumbnail')
               span
               h5 View User
@@ -85,26 +85,27 @@ html(lang='en')
                           th(scope="col") Subject
                         tr
                       tbody
-                      for ticket in tickets
-                        - var ticketPriority;
-                        if ticket.priority
-                          - ticketPriority = "table-danger";
-                        else
-                          - ticketPriority = "tickets";
-                        tr(class=ticketPriority, id=ticket.ticketId, href="/tickets/"+ user.userId + "/" + ticket.ticketId)
-                          td
-                            span #{count++}
-                          td
-                            span #{ticket.user.firstName + " " + ticket.user.lastName}
-                          td
-                            span #{ticket.user.email}
-                          td
-                            span #{ticket.user.phoneNumber}
-                          td
-                            span #{ticket.topic}  
-                          td
-                            span #{ticket.title}
-                  
+                        if tickets
+                          for ticket in tickets
+                            p=ticket
+                            - var ticketPriority;
+                            if ticket.priority
+                              - ticketPriority = "table-danger";
+                            else
+                              - ticketPriority = "tickets";
+                            tr(class=ticketPriority, id=ticket.ticketId, href="/tickets/"+ user.userId + "/" + ticket.ticketId)
+                              td
+                                span #{count++}
+                              td
+                                span #{ticket.user.firstName + " " + ticket.user.lastName}
+                              td
+                                span #{ticket.user.email}
+                              td
+                                span #{ticket.user.phoneNumber}
+                              td
+                                span #{ticket.topic}  
+                              td
+                                span #{ticket.title}
     //
       Bootstrap core JavaScript
       ==================================================
@@ -113,5 +114,3 @@ html(lang='en')
     script(src='/js/bootstrap.min.js')
     include common/footer.pug
     +footer()
-    
-    
