--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -49,7 +49,7 @@ html(lang='en')
           .container
             h1.display-4 Welcome to ACNAPI's Helpdesk
             p Log in to submit a ticket and our technical consultants will get back to you within 3 working days.
-            p: a.btn.btn-primary.btn-warning(href="/users/ticket_form/basics" role="button") Submit Ticket &raquo;
+            p: a.btn.btn-primary.btn-warning(href="/ticket_form/basics" role="button") Submit Ticket &raquo;
     include common/footer.pug
     +footer()
 
