route for view ticket fix

--- a/views/welcomeAdmin.pug
+++ b/views/welcomeAdmin.pug
@@ -47,7 +47,7 @@ html(lang='en')
               span
               h5 RT Chat
             .col-xs-6.col-sm-3.placeholder
-              a(href="/") 
+              a(href="/ticket/0/" + user.userId) 
                 img.img-responsive(src='/images/001-ticket.png', width='150', height='150', alt='Generic placeholder thumbnail')
               span
               h5 Ticket
