profile pages changes

--- a/views/manage/user_profile.pug
+++ b/views/manage/user_profile.pug
@@ -60,7 +60,7 @@ body
             -webkit-flex-grow: 1;
             -ms-flex-positive: 1;
             flex-grow: 1;
-            height: 120px;
+            height: 50px;
             font-weight: 600;
             text-align: center;
             margin-top: 10px;
@@ -89,7 +89,7 @@ body
             font-weight: 600;
             line-height: 2.5em;
             margin-top: auto;
-            margin-bottom: 25px;
+            margin-bottom: 10px;
             -webkit-transition: all .2s ease;
             transition: all .2s ease;
         }
@@ -194,6 +194,7 @@ body
             flex-flow: column;
             box-shadow: 0px 15px 50px 10px rgba(0, 0, 0, 0.2);
             box-sizing: border-box;
+            margin-top: 30px;
             height: 700px;
             width: 1000px;
             background: #fff;
