--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -1,5 +1,3 @@
-
-
 doctype html
 html(lang='en')
   include ../common/header.pug
@@ -197,7 +195,7 @@ html(lang='en')
           box-shadow: 0px 15px 50px 10px rgba(0, 0, 0, 0.2);
           box-sizing: border-box;
           margin-top: 30px;
-          height: 650px;
+          height: 700px;
           width: 1000px;
           background: #fff;
           background: url('https://pexels.imgix.net/photos/27718/pexels-photo-27718.jpg?fit=crop&w=1280&h=823') top left no-repeat;
@@ -274,6 +272,6 @@ html(lang='en')
               .spacing
                 p.mt-2.mb-0
                   | Change your password #[a(href="/users/change_password" class="text-light") here].
-              button.btn.ghost-round.full-width Confirm Changes
+              button.ghost-round.full-width Confirm Changes
     include ../common/footer.pug
     +footer()
